--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -43,31 +43,24 @@
 <body>
     <div id="pageContainer">
         <div id="pageContent">
-            <h1>Botball Simulation</h1>
-            <p>
-                <span id="simulationStatus">Simulation not configured</span> |
-                <span id="messages">no message</span>
-
-            </p>
-            <p>
-                <a id="startSimulation" href="#">Start Simulation</a>
-                <a id="stopSimulation" href="#" style="display: none">Stop Simulation</a> |
-                
-                <a id="setupSimulationLink" href="#">Create Demo Setup</a> |
-                <a id="loadRobotsLink" href="#">Retrieve robots</a>
-            </p>
-
-            <div class="formBox">
-                <input type="text"/>
-                <input type="submit"/>
-            </div>
-
             <div id="canvasBox">
-                <canvas id="botBallCanvas" width="480" height="400"></canvas>
+                <canvas id="botBallCanvas" width="480" height="350"></canvas>
             </div>
-        </div>
-        <div id="pageFooter">
-            BotBall: Check <a href="https://github.com/ekarlsso/Botball-Simulator">github</a>
+            <div id="commands">
+                <p>
+                    <span id="simulationStatus">Simulation not configured</span> |
+                    <span id="messages">no message</span>
+
+                </p>
+                <p>
+                    <a id="startSimulation" href="#">Start Simulation</a>
+                    <a id="stopSimulation" href="#" style="display: none">Stop Simulation</a> |
+
+                    <a id="setupSimulationLink" href="#">Create Demo Setup</a> |
+                    <a id="loadRobotsLink" href="#">Retrieve robots</a>
+                </p>
+
+            </div>
         </div>
     </div>
 </body>
